Fix lint errors